Tesis with all the plots

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -422,3 +422,44 @@
   year={2007},
   publisher={Elsevier}
 }
+
+
+@article{van1985estimation,
+  title={Estimation of atmospheric boundary layer parameters for diffusion applications},
+  author={Van Ulden, AP and Holtslag, AAM},
+  journal={Journal of Climate and Applied Meteorology},
+  volume={24},
+  number={11},
+  pages={1196--1207},
+  year={1985}
+}
+
+
+@book{turner1994workbook,
+  title={Workbook of atmospheric dispersion estimates: an introduction to dispersion modeling},
+  author={Turner, D Bruce},
+  year={1994},
+  publisher={CRC press}
+}
+
+
+%%%%%%%%%%%%%Outside the introduction %%%%%%%%%%%%%5
+
+@article{roberts2009examples,
+  title={Examples of adaptive MCMC},
+  author={Roberts, Gareth O and Rosenthal, Jeffrey S},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={18},
+  number={2},
+  pages={349--367},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{osborne2009gaussian,
+  title={Gaussian processes for global optimization},
+  author={Osborne, Michael A and Garnett, Roman and Roberts, Stephen J},
+  booktitle={3rd international conference on learning and intelligent optimization (LION3)},
+  pages={1--15},
+  year={2009}
+}
